argocd/apps/istio/resources/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.istio.yanello.net"
    - istio.yanello.net
    port:
      name: https
      number: 443
      protocol: HTTPS
