argocd/apps/istio/resources/external-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: resume-vs
spec:
  hosts:
  - resume.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: marcus-server.lan
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: resume-se
  namespace: istio-system
spec:
  hosts:
  - marcus-server.lan
  ports:
  - number: 3000
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
