argocd/apps/istio/resources/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
spec:
  hosts:
  - argocd.istio.yanello.net
  gateways:
  - istio-system/http-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
